--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,125 @@
 h1{
   color:red;
 }
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 30px auto;
+  overflow: auto;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+}
+.red-text {
+  max-width: 700px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 0px;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.container2 {
+  max-width: 700px;
+  margin: 30px auto;
+  overflow: auto;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+}
+.title-container {
+  max-width: 700px;
+  overflow: auto;
+  border-radius: 5px;
+  color: red;
+}
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+.btn:focus {
+  outline: none;
+}
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+.hightligh_magenta{
+  background: magenta;
+  color:white;
+}
+
+.inprogress{
+  color: blue;
+  font-weight: bold;
+  padding:10px 10px 10px 0px;
+}
+.done{
+  color: #666;
+  text-decoration: line-through;
+  padding:10px 10px 10px 0px;
+}
+
+.padding{
+  padding:10px 10px 10px 0px;
+}
