--- a/src/app/formation/formation-list/formation-list.component.html
+++ b/src/app/formation/formation-list/formation-list.component.html
@@ -1,11 +1,18 @@
-<button [disabled]="!activer" (click)="toggle()">Bouton désactivé</button>
-
-<div class='container' *ngFor="let unElement of trainings" >
-  <p highlight inputColor="magenta">{{unElement.nom}}</p>
-  <p appConfirm>{{unElement.nom}}</p>
-  <span *ngIf="unElement.url">(en ligne)</span>
-  <span *ngIf="unElement.lieu">(sur site)</span>
-  <mon-premier-component></mon-premier-component>
+<div class='container'>
+  <button class="btn" (click)="toggleAll()">Afficher Tout/ Cacher Tout</button>
 </div>
+<div class='container' *ngFor="let unElement of trainings" >
+  <div>
+      <h2>{{unElement.nom}}</h2>
+      <button (click)="toggle(unElement.nom)" class="btn">Afficher/Cacher </button>
+  </div>
+  <div [hidden]="unElement.hidden">
+    <p>{{unElement.nom}}</p>
+    <span *ngIf="unElement.url">(en ligne)</span>
+    <span *ngIf="unElement.lieu">(sur site)</span>
+    <mon-premier-component></mon-premier-component>
+  </div>
+</div>
+
 
  
