--- a/src/app/formation/formation-list/formation-list.component.html
+++ b/src/app/formation/formation-list/formation-list.component.html
@@ -1,13 +1,14 @@
+<p>{{ data | uppercaseFirstCaracter}}</p>
 <div class='container'>
+  <p>{{ currentDate | date:'short' }}</p>
   <button class="btn" (click)="toggleAll()">Afficher Tout/ Cacher Tout</button>
 </div>
 <div class='container' *ngFor="let unElement of trainings" >
   <div>
-      <h2>{{unElement.nom}}</h2>
+      <h2>{{unElement.nom | monUpperCase:'F':'FFFFF'| monUpperCase:'A':'AAAA' }}</h2>
       <button (click)="toggle(unElement.nom)" class="btn">Afficher/Cacher </button>
   </div>
   <div [hidden]="unElement.hidden">
-    <p>{{unElement.nom}}</p>
     <span *ngIf="unElement.url">(en ligne)</span>
     <span *ngIf="unElement.lieu">(sur site)</span>
     <mon-premier-component></mon-premier-component>
