--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ body {
   margin: 30px auto;
   overflow: auto;
   border: 1px solid steelblue;
+  background-color: #666;
   padding: 30px;
   border-radius: 5px;
 }
